--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,28 @@
         xmlns:local="clr-namespace:JKLJ"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+    <StackPanel>
+        <ListView>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <WrapPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Tytul:"/>
+                            <Label Content="{Binding Title}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Opis:"/>
+                            <Label Content="{Binding Description}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Autor:"/>
+                            <Label Content="{Binding Author}"/>
+                        </StackPanel>
+                        <Button Content="Usun" Click="Button_Delete"/>
+                        <Button Content="Bookmarks" Click="Button_Bookmark"/>
+                    </WrapPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </StackPanel>
 </Window>
